--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -13,5 +13,9 @@
   <%= render "todo_items/form" %>
  </div>
 </div>
-<%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
-<%= link_to 'Back', todo_lists_path %>
+
+<div>
+  <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
+  <%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: "Arye you sure?"} %>
+  <%= link_to 'Back', todo_lists_path %>
+</div>
